# uv-example-workspace

./: main.py  pyproject.toml
cli/: pyproject.toml
cli/cli/: main.py
core/: pyproject.toml
core/src/core/: __init__.py
gui/: pyproject.toml
native/: .gitignore  pyproject.toml
native/native/: __init__.py  _lib.pyi
native/src/: fib.zig
native/test/: test_fib.py
