[project]
name = "native"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = []
requires-python = ">=3.12"

[dependency-groups]
dev = ["ziggy-pydust==0.23.2", "pytest>=8", "ruff>=0.4.0"]

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "UP", "I001", "I002"]

[[tool.pydust.ext_module]]
name = "native._lib"
root = "src/fib.zig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
